[gd_scene load_steps=4 format=2]

[ext_resource path="res://Terrain/Sprites/lava.png" type="Texture" id=1]
[ext_resource path="res://Terrain/Lava.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 894.5, 1813.5 )

[node name="Lava" type="StaticBody2D" groups=["landmark"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 80, 9, 80, 30, 86, 35, 103, 38, 113, 48, 121, 52, 124, 54, 126, 56, 128, 223, 127, 226, 126, 244, 126, 245, 125, 274, 125, 275, 124, 304, 124, 333, 123, 336, 124, 364, 124, 365, 126, 394, 125, 395, 126, 423, 126, 425, 128, 442, 127, 464, 124, 481, 117, 497, 109, 504, 103, 511, 98, 512, 127, 509, 128, 56, 131, 0, 128 )

[node name="LavaArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LavaArea"]
polygon = PoolVector2Array( 36, 98, 53, 93, 125, 95, 151, 98, 188, 95, 261, 98, 310, 96, 361, 96, 388, 101, 406, 97, 422, 98, 441, 95, 458, 96, 483, 96, 491, 93, 504, 96, 507, 99, 467, 122, 195, 126, 57, 127, 39, 113 )

[node name="PastLavaArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PastLavaArea"]
position = Vector2( 1405, -1717 )
shape = SubResource( 1 )

[node name="LandmarkAnchor" type="Node2D" parent="."]
position = Vector2( 51, 94 )
